--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.3",
-    "express-oauth-server": "^2.0.0",
+    "express-session": "^1.15.2",
     "mysql": "^2.16.0",
-    "promise-mysql": "^3.3.1"
+    "oauth2orize": "^1.8.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "passport-oauth2-client-password": "^0.1.2",
+    "promise-mysql": "^3.3.1",
+    "request": "^2.88.0"
   }
 }
