--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
