--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-session": "^1.15.2",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
     "oauth2orize": "^1.8.0",
     "passport": "^0.3.2",
